# eMERLIN_CASA_pipeline

./: .pre-commit-config.yaml  0716+4708.rfis  Dockerfile  Dockerfile.prod  GUI_test.py  README.md  config.py  default_params.json  default_params.py  dfluxpy-perleybutler.py  eMERLIN_CASA_GUI.py  eMERLIN_CASA_functions.py  eMERLIN_CASA_pipeline.py  environment.yml  inputs.ini  inputs.txt  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  task_importfitsidi.py
.github/workflows/: build.yaml  build_base_container.yaml  build_latest_container.yaml  publishpypi.yaml  testpypi.yaml
aoflagger_strategies/: 1407+284.rfis
aoflagger_strategies/default/: 1331+305.lua  1331+305.rfis  1407+284.rfis  default_faint.rfis
aoflagger_strategies/other/: 0319+415.rfis  0716+4708.rfis  1407+284.rfis  eMERLIN_default_ao_strategy_v1.rfis
calibrator_models/: 1331+305.clean.L.tgz
calibrator_models/1331+305.clean.model.tt0/: table.f0_TSM0  table.info
calibrator_models/3C286_C.clean.model.tt0/: table.info
calibrator_models/3C286_C.clean.model.tt0/logtable/: table.info
docs/: index.md
docs/src/: acknowledgements.md  description.md  examples.md  index.md  installation.md
documentation/: docs.html  docs.md
functions/: default_params.py  dflux.py  eMCP_functions.py  eMCP_plots.py  eMCP_utils.py  eMCP_weblog.py  eMERLIN_CASA_GUI.py  eMERLIN_CASA_functions.py  eMERLIN_CASA_plots.py  run_flagstatistics.py  run_fluxscale.py  selfcal.py  weblog.py
src/eMCP/: __init__.py
src/eMCP/flagstatistics/: __init__.py  run_flagstatistics.py
src/eMCP/utils/: eMCP.css  (+1 more)
utils/: eMCP.css
(+14 files in other folders)
